<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.air.sportloc.RegistrationActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="335dp"
        android:layout_height="95dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/layout_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:scrollbars="vertical">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/txt_name"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <EditText
                android:id="@+id/txtSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/txt_surname"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/txt_username"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSurname"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtUsername"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="135dp"
                android:layout_height="33dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/tv_gender"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/btnMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_general_selected"
                android:text="@string/btn_male"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btnFemale"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />

            <Button
                android:id="@+id/btnFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_general"
                android:text="@string/btn_female"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/tvGender"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btnMale" />

            <EditText
                android:id="@+id/txtBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/txt_birthday"
                android:inputType="date"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMale"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="122dp" />

            <Button
                android:id="@+id/btnRegistration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_general"
                android:text="@string/btn_registration"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBirthday" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
