<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.air.sportloc.MainActivity">

    <ImageView
        android:id="@+id/ivFacebook"
        android:layout_width="21dp"
        android:layout_height="52dp"
        android:adjustViewBounds="false"
        app:srcCompat="@drawable/fb_icon"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="@+id/btnFacebook"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnFacebook"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnFacebook" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="335dp"
        android:layout_height="95dp"
        android:layout_marginTop="-171dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.117" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/tv_login"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_account"

        android:gravity="center_horizontal"
        android:text="@string/btn_account"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_facebook"
        android:gravity="center_horizontal"
        android:text="@string/btn_facebook"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAccount"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_google"
        android:gravity="center_horizontal"
        android:text="@string/btn_google"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="43dp"
        app:srcCompat="@drawable/google_icon"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoogle"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/btnGoogle"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="41dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnGoogle" />

</android.support.constraint.ConstraintLayout>
